force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/cgc_sync__Sync_Mobile_App_Installation__c.object-meta.xml
<CustomObject>
    <description>Stores information about each single installation of the mobile app on any device.</description>
    <label>Mobile App Installation</label>
    <nameField>
        <displayFormat>SMAI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile App Installations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>