force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__API_Calls_Down__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__API_Calls_Down__c</fullName>
    <description>Sum of all API Calls grouped by Downloads syncs since the first installation or since the last reset if one has been performed.</description>
    <label>#API Calls Down</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>