force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__API_Calls_Everything__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__API_Calls_Everything__c</fullName>
    <description>Sum of all API Calls. Not all API calls come from Up/Down and NFT calls.</description>
    <label>#API Calls Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>