force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Avg_API_Calls_Up_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Avg_API_Calls_Up_Per_Day__c</fullName>
    <description>Weighted average of API calls to upload. Calculated only on the view and not persistent fields.</description>
    <label>Average API Calls Down per day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>