force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Client_App_ID__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Client_App_ID__c</fullName>
    <description>Stores the client app ID used by the device and user combination related to a particular Cloud Synchronization App_Installation__c record.</description>
    <inlineHelpText>Client App ID or Configuration which is assigned to the mobile device.</inlineHelpText>
    <label>Client App Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>