force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Deployment_Package__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Deployment_Package__c</fullName>
    <description>Name of the deployment.zip package that is installed on the device.</description>
    <label>Deployment Package</label>
    <length>80</length>
    <type>Text</type>
</CustomField>