force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Device_Model__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_Model__c</fullName>
    <description>The model of the client device.</description>
    <inlineHelpText>The model of the client device.</inlineHelpText>
    <label>Device Model</label>
    <length>32</length>
    <type>Text</type>
</CustomField>