force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Device_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Device_OS_Version__c</fullName>
    <description>The operating system running on client device.</description>
    <inlineHelpText>The operating system running on client device.</inlineHelpText>
    <label>Device OS Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>