force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__DeviceId__c</fullName>
    <description>Installation ID of the device.</description>
    <label>Installation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>