force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Encryption_Key__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Encryption_Key__c</fullName>
    <description>Encryption key for the device.</description>
    <inlineHelpText>Encryption key (GUID) for the device.</inlineHelpText>
    <label>Encryption Key</label>
    <length>36</length>
    <type>Text</type>
</CustomField>