force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Event_Period_Length_Hours__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Event_Period_Length_Hours__c</fullName>
    <defaultValue>24</defaultValue>
    <description>Period of time for controlling events max quantity limitations. Measured in Hours.</description>
    <label>Events Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>