force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Free_Persistent_Storage_Space__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Free_Persistent_Storage_Space__c</fullName>
    <description>number of bytes available on disk of device</description>
    <label>Free Disc Space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>