force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Installation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Installation_Date_Time__c</fullName>
    <description>Date and time when the package was installed.</description>
    <label>Installation Date</label>
    <type>DateTime</type>
</CustomField>