force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Installed_App_Version__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Installed_App_Version__c</fullName>
    <description>The installed application version on client device (the version number from the appstore).</description>
    <inlineHelpText>The installed application version on client device.</inlineHelpText>
    <label>App Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>