force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__IsEncrypted__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__IsEncrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag indicates if the device database is encrypted.</description>
    <inlineHelpText>A flag indicates if the device database is encrypted.</inlineHelpText>
    <label>Encrypted</label>
    <type>Checkbox</type>
</CustomField>