force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Last_Connection_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Last_Connection_At__c</fullName>
    <description>Last connection when any an Upload or a Download has been attempted, that is, independent from success.</description>
    <label>Last Connection</label>
    <type>DateTime</type>
</CustomField>