force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Last_Failed_Sync_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Last_Failed_Sync_At__c</fullName>
    <description>Last failed Synchronization, independent from later successful syncs.</description>
    <label>Last Failed Sync</label>
    <type>DateTime</type>
</CustomField>