force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Last_Reset_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Last_Reset_At__c</fullName>
    <description>Timestamp when last Reset was performed</description>
    <label>Last Reset</label>
    <type>DateTime</type>
</CustomField>