force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Last_Successful_Upload_At__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Last_Successful_Upload_At__c</fullName>
    <description>Last successful Upload, when last Synchronized Sync Status was received.</description>
    <label>Last Successful Upload</label>
    <type>DateTime</type>
</CustomField>