force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Link_to_Device_Details__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Link_to_Device_Details__c</fullName>
    <description>Link to the device details.</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + &apos;/&apos;+ Id + &apos;/e?retURL=/one/one.app#/alohaRedirect/apex/AppInstallations&apos;, &apos;Device Details&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Details</label>
    <type>Text</type>
</CustomField>