force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Link_to_the_Record__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Link_to_the_Record__c</fullName>
    <description>Link to the record.</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to the Record</label>
    <type>Text</type>
</CustomField>