force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Local_Database_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Local_Database_Record_Count__c</fullName>
    <description>total number of records held on the local database of the device</description>
    <label>Local Database Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>