force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__minCacheLogLevel__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__minCacheLogLevel__c</fullName>
    <defaultValue>500</defaultValue>
    <description>Stores the minimum cache log level.</description>
    <label>minCacheLogLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>