force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__minSubmitLogLevel__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__minSubmitLogLevel__c</fullName>
    <defaultValue>900</defaultValue>
    <description>Stores the minimum submit log level.</description>
    <label>minSubmitLogLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>