force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Number_Of_Resets__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Number_Of_Resets__c</fullName>
    <description>Number of resets performed.</description>
    <label>#Resets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>