force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Pending_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Pending_Record_Count__c</fullName>
    <description>Stores the number of pending records to sync.</description>
    <label>Records Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>