force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Permission_Set_Assigned__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Permission_Set_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Refers to the assigned permission set.</description>
    <label>Permission Set Assigned</label>
    <type>Checkbox</type>
</CustomField>