force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Platform__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Platform__c</fullName>
    <description>The platform of the device.</description>
    <inlineHelpText>The platform of the device. iOS or Android</inlineHelpText>
    <label>Platform</label>
    <length>24</length>
    <type>Text</type>
</CustomField>