force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Record_Error_Count__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Record_Error_Count__c</fullName>
    <description>Counter to determine the number of detected errors.</description>
    <label>Records with Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>