force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Remote_Procedure_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Remote_Procedure_Call_Log__c</fullName>
    <description>Stores a list of command instances that were executed by the client (the client updates this field after successfully processing a command).</description>
    <inlineHelpText>Stores the list of command instances that were executed by the client already.</inlineHelpText>
    <label>RPC Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>