force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Remote_Procedure_Call_Queue__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Remote_Procedure_Call_Queue__c</fullName>
    <description>Holds a list of command instances (in order of insertion) as a semicolon separated string. The client reads this list to determine what remote procedures were called by the back-end.</description>
    <inlineHelpText>The client reads this list to determine what remote procedures were called by the back-end.</inlineHelpText>
    <label>RPC Queue</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>