force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Remote_Procedure_Call_Supported_Commands__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Remote_Procedure_Call_Supported_Commands__c</fullName>
    <description>Holds a list of command code names as a semicolon separated list of strings. The client populates this list, allowing the back-end to determine what remote procedures could be called by the back-end.</description>
    <inlineHelpText>Stores supported command code names of the client version (newer versions may have new commands compared to older ones).</inlineHelpText>
    <label>RPC Supported Commands</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>