force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Schemaless_Extension_JSON__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Schemaless_Extension_JSON__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>This field is designed to contain schemaless, user/project specific data associated with a specific application installation.</description>
    <inlineHelpText>Stores a JSON document that can be accessed by the mobile clients.</inlineHelpText>
    <label>Schemaless Extension JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>