force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Sync_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Error_Message__c</fullName>
    <description>Error message to display when an error occurs during sync.</description>
    <label>Last Error Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>