force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Status__c</fullName>
    <description>Indicates the status of the latest sync request.</description>
    <label>Latest Sync State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>