force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__TechPanel__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__TechPanel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable or disable the tech panel on the mobile device</description>
    <inlineHelpText>Enable or disable the tech panel on the mobile device</inlineHelpText>
    <label>Debug Window</label>
    <type>Checkbox</type>
</CustomField>