force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Total_API_Calls_Up__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Total_API_Calls_Up__c</fullName>
    <description>Total number of API calls grouped by Uploads syncs since the first installation. This value will not be affected by the Reset functionality.</description>
    <label>#Total API Calls Up</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>