force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Trace_Mode_Area__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Trace_Mode_Area__c</fullName>
    <label>Trace Mode Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
                <default>true</default>
                <label>Application</label>
            </value>
            <value>
                <fullName>Synchronization</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>