force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Trace_Mode_Duration__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Trace_Mode_Duration__c</fullName>
    <description>The number of hours the logging trace can be active on device.</description>
    <label>Trace Mode Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>