force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Trace_Mode_On__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Trace_Mode_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trace Mode</label>
    <type>Checkbox</type>
</CustomField>