force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__TraceModeTill__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__TraceModeTill__c</fullName>
    <description>End date of trace mode on mobile device</description>
    <inlineHelpText>End date of trace mode on mobile device</inlineHelpText>
    <label>Trace Mode Till</label>
    <type>Date</type>
</CustomField>