force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__User__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User information.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sync_Mobile_App_Installations</relationshipName>
    <type>Lookup</type>
</CustomField>