force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/listViews/cgc_sync__All.listView-meta.xml
<ListView>
    <fullName>cgc_sync__All</fullName>
    <columns>NAME</columns>
    <columns>cgc_sync__User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>